# pHash

./: .gitignore  Makefile.am  bootstrap  config.h.in  configure.ac  libpHash.spec  pHash.pc.in
contrib/bindings/java/: Makefile.am  phash-jni.cpp
contrib/examples/: add_mvptree_audio.cpp  add_mvptree_dct.cpp  build_mvptree_audio.cpp  build_mvptree_dctimage.cpp  query_mvptree_audio.cpp  query_mvptree_dct.cpp  test_audiophash.cpp  test_dctvideohash.cpp  test_imagephash.cpp  test_mhimagehash.cpp  test_texthash.cpp  test_texthash2.cpp
contrib/mediahash/: Hash.cpp  Hash.h  Makefile  MediaFile.cpp  MediaFile.h  VideoFile.cpp  VideoFile.h  mediahash.cpp
contrib/mvptree/: mvptree.c
include/: MediaContext.h  VideoProcessor.h  audiohash.h  audiophash.h  cimgffmpeg.h  fft.h  internal.h  ph_fft.h  phash.h  phashconfig.h  phcomplex.h
projects/vs2012/: libphash.sln  libphash.vcxproj
projects/vs2015/: libphash.sln  libphash.vcxproj  libphash.vcxproj.filters  mediahash.vcxproj  mediahash.vcxproj.filters  mvptree.vcxproj  mvptree.vcxproj.filters  phash.sln  phash.vcxproj  phash.vcxproj.filters  test_dctvideohash.vcxproj  test_dctvideohash.vcxproj.filters
src/: Makefile.am  MediaContext.cpp  VideoProcessor.cpp  audiohash.cpp  audiophash.cpp  callbacks.cpp  callbacks.h  cimgffmpeg.cpp  fft.cpp  internal.h  ph_fft.c  ph_fft.cpp  phash.cpp  phash.h  phcomplex.c
